Add monero page

--- a/lightworks.html
+++ b/lightworks.html
@@ -53,6 +53,9 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <li class="w3-padding-16">
                             <span class="w3-large dracula-yellow"><a href="lightworks.html">Lightworks</a></span><br>
                         </li>
+                        <li class="w3-padding-16">
+                            <span class="w3-large"><a href="monero.html">Monero</a></span><br>
+                        </li>
                     </ul>
                 </div>
                 <!-- END Introduction Menu -->
