--- a/monero.html
+++ b/monero.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>About Me</title>
+<title>Monero</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/css/w3.css">
@@ -37,7 +37,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                             <span class="w3-large"><a href="index.html">Home / Blog</a></span><br>
                         </li>
                         <li class="w3-padding-16">
-                            <span class="w3-large dracula-yellow"><a href="about-me-and-contact.html">About Me &
+                            <span class="w3-large"><a href="about-me-and-contact.html">About Me &
                                     Contact</a></span><br>
                         </li>
                         <li class="w3-padding-16">
@@ -54,7 +54,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                             <span class="w3-large"><a href="lightworks.html">Lightworks</a></span><br>
                         </li>
                         <li class="w3-padding-16">
-                            <span class="w3-large"><a href="monero.html">Monero</a></span><br>
+                            <span class="w3-large dracula-yellow"><a href="monero.html">Monero</a></span><br>
                         </li>
                     </ul>
                 </div>
@@ -64,36 +64,34 @@ and is wrapped around the whole page content, except for the footer in this exam
             <div class="w3-col l8 s12">
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container w3-padding dracula-current-line">
-                        <h4>About Me & Contact</h4>
+                        <h4>Monero</h4>
                     </div>
                 </div>
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container">
                         <p>
-                        <h4><b>About Me</b></h4>
-                        I’m Kevin Thomas, a software engineer from Seattle, Washington, USA. I develop video games,
-                        produce music, and create things.
-                        <br />
-                        <br />
-                        <img src="/images/me.jpg" alt="Drawing Of Me" style="width:30%">
-                        <h4><b>Contact Me</b></h4>
-                        Email me: <a href="mailto:me@kevinthomas.dev">me@kevinthomas.dev</a>
-                        <h4><b>Social Media</b></h4>
-                        <div class="w3-col m8 s12">
-                            <p><a href="https://www.instagram.com/kevinthomasdev" target="_blank"><button
-                                        class="w3-button w3-padding-large dracula-bg w3-border"><b>Development
-                                            Instagram »</b></button></a></p>
-                        </div>
-                        <div class="w3-col m8 s12">
-                            <p><a href="https://www.facebook.com/kevinthomasdev" target="_blank"><button
-                                        class="w3-button w3-padding-large dracula-bg w3-border"><b>Development
-                                            Facebook »</b></button></a></p>
-                        </div>
-                        <div class="w3-col m8 s12">
-                            <p><a href="https://twitter.com/kevinthomasdev" target="_blank"><button
-                                        class="w3-button w3-padding-large dracula-bg w3-border"><b>Development
-                                            Twitter »</b></button></a></p>
-                        </div>
+                          <h4><b>What is Monero (XMR)?</b></h4>
+                          Monero is the leading cryptocurrency focused on private transactions.
+                          It uses various privacy-enhancing technologies to ensure the anonymity of its users.
+                          <br />
+                          <br />
+                          <a href="https://www.getmonero.org/get-started/what-is-monero" target="_blank">https://www.getmonero.org/get-started/what-is-monero</a>
+                          <h4><b>What is a Monero Node?</b></h4>
+                          A device on the Internet running the Monero software, with a full copy of the Monero blockchain, actively assisting the Monero network.
+                          Remote nodes can be private, if they are for personal use only, or open, if they are accessible by other people.
+                          If you can, it is always preferable to <a href="https://www.monero.how/how-to-run-monero-node" _target="_blank">run your own node</a> rather than use a remote one.
+                          <br />
+                          <br />
+                          An Open remote node can be used by people who, for their own reasons (usually because of hardware requirements, disk space, or technical abilities), can't/don't want to run their own node and prefer to relay on one publicly available on the Monero network.
+                          Open remote nodes are often simply referred as "remote nodes".
+                          <br />
+                          <br />
+                          <a href="https://www.getmonero.org/resources/moneropedia/remote-node.html" target="_blank">https://www.getmonero.org/resources/moneropedia/remote-node.html</a>
+                          <h4><b>My Remote Node</b></h4>
+                          If you need to use a remote node, I run a public node with the full not-pruned Monero blockchain:
+                          <br />
+                          <br />
+                          <code>monero.kevinthomas.dev</code> at port <code>18089</code>
                         </p>
                     </div>
                 </div>
