--- a/open-source-projects.html
+++ b/open-source-projects.html
@@ -53,6 +53,9 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <li class="w3-padding-16">
                             <span class="w3-large"><a href="lightworks.html">Lightworks</a></span><br>
                         </li>
+                        <li class="w3-padding-16">
+                            <span class="w3-large"><a href="monero.html">Monero</a></span><br>
+                        </li>
                     </ul>
                 </div>
                 <!-- END Introduction Menu -->
@@ -67,56 +70,24 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container">
                         <p>
-						<h4><b>Alpine Linux Package Maintainer</b></h4>
-						I maintain several packages for the Alpine Linux distribution, one of my favorite Linux
-						distributions. I have contributed several aports to their repositories. For a list of
-						packages I maintain, you can go here:
-						<a href="https://pkgs.alpinelinux.org/packages?name=&branch=edge&maintainer=Kevin+Thomas"
-							target="_blank">
-							https://pkgs.alpinelinux.org/packages?name=&branch=edge&maintainer=Kevin+Thomas</a>
+                        <h4><b>Alpine Linux Package Maintainer</b></h4>
+                        I maintain several packages for the Alpine Linux distribution, one of my favorite Linux
+                        distributions. I have contributed several aports to their repositories. For a list of
+                        packages I maintain, you can go here:
+                        <a href="https://pkgs.alpinelinux.org/packages?name=&branch=edge&maintainer=Kevin+Thomas"
+                          target="_blank">
+                          https://pkgs.alpinelinux.org/packages?name=&branch=edge&maintainer=Kevin+Thomas</a>
 
-						<h4><b>CryptoScamDB-Lists</b></h4>
-						Various lists in plain text format from CrytoScamDB to be used with services such as Pi-hole.
-						The repository is hosted on my <a href="https://gitlab.com/KevinThomas0/cryptoscamdb-lists"
-                            target="_blank">Gitlab</a>.
-
-                        <h4><b>debian-gaming-setup</b></h4>
-                        <h5>Overview</h5>
-                        debian-gaming-setup is an interactive shell script for installing recommended tools to game
-                        efficiently on the Debian distribution of the Linux operating system. It is licensed under the
-                        GNU General Public License (Version 3).
-                        <br />
-                        <br />
-                        The repository is hosted on my <a href="https://gitlab.com/KevinThomas0/debian-gaming-setup"
-                            target="_blank">Gitlab</a>.
-                        <h5>Features</h5>
-                        The script is written in Bash, and guides the user through the installation of the following
-                        tools:
-                        <ul>
-                            <li>Nvidia or AMD graphics drivers</li>
-                            <li>Steam - the largest video game digital distribution service for computer games</li>
-                            <li>Wine - a tool that allows Windows programs to run on Linux</li>
-                            <li>Lutris - a Linux video game manager</li>
-                        </ul>
-                        <h5>Testing</h5>
-                        The script uses <a href="https://gitlab.gnome.org/GNOME/zenity" target="_blank">Zenity</a> to
-                        provide the option of interacting with the script using GUI dialog
-                        boxes, rather than through the terminal.
-                        <br />
-                        <br />
-                        The script has unit tests written using <a href="https://github.com/bats-core/bats-core"
-                            target="_blank">Bats</a> (Bash Automated Testing System). GitLab’s CI tool
-                        runs these tests, along with <a href="https://github.com/koalaman/shellcheck"
-                            target="_blank">ShellCheck</a> when code is pushed to the repository.
+                        <h4><b>CryptoScamDB-Lists</b></h4>
+                        Various lists in plain text format from CrytoScamDB to be used with services such as Pi-hole.
+                        The repository is hosted on my <a href="https://gitlab.com/KevinThomas0/cryptoscamdb-lists"
+                                        target="_blank">Gitlab</a>.
 
                         <h4><b>kde-virtual-desktops-polybar</b></h4>
-                        <h5>Overview</h5>
                         kde-virtual-desktops-polybar is a collection of scripts meant to be used
                         with the KDE Plasma desktop environment in modules for <a
                             href="https://github.com/polybar/polybar" target="_blank">Polybar</a> - a
                         status bar for linux desktops.
-                        <br />
-                        <br />
                         The repository is hosted on my <a
                             href="https://gitlab.com/KevinThomas0/kde-virtual-desktops-polybar"
                             target="_blank">Gitlab</a>.
