Add donation information

--- a/monero.html
+++ b/monero.html
@@ -92,6 +92,14 @@ and is wrapped around the whole page content, except for the footer in this exam
                           <br />
                           <br />
                           <code>monero.kevinthomas.dev</code> at port <code>18089</code>
+                          <h4><b>Donation Info</b></h4>
+                          My Monero address:
+                          <br />
+                          <br />
+                          <pre>
+46EodXwAyhwDw61RmjBaFQegrhZAwDFvEdKLdME7q7owSDJvDnKPymCWLmDTpfgFV7KzkNAqkZMECiAhiXpYAmaWV3ikXaV
+</pre>
+                        <img src="/images/monero-address.png" alt="Monero Address QR Code" class="center">
                         </p>
                     </div>
                 </div>
