Add ethereum information

--- a/bean-boy-games.html
+++ b/bean-boy-games.html
@@ -55,7 +55,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                             <span class="w3-large"><a href="lightworks.html">Lightworks</a></span><br>
                         </li>
                         <li class="w3-padding-16">
-                            <span class="w3-large"><a href="monero.html">Monero</a></span><br>
+                            <span class="w3-large"><a href="cryptocurrency.html">Cryptocurrency</a></span><br>
                         </li>
                     </ul>
                 </div>
