--- a/cryptocurrency.html
+++ b/cryptocurrency.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Monero</title>
+<title>Cryptocurrency</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/css/w3.css">
@@ -54,7 +54,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                             <span class="w3-large"><a href="lightworks.html">Lightworks</a></span><br>
                         </li>
                         <li class="w3-padding-16">
-                            <span class="w3-large dracula-yellow"><a href="monero.html">Monero</a></span><br>
+                            <span class="w3-large dracula-yellow"><a href="cryptocurrency.html">Cryptocurrency</a></span><br>
                         </li>
                     </ul>
                 </div>
@@ -64,12 +64,25 @@ and is wrapped around the whole page content, except for the footer in this exam
             <div class="w3-col l8 s12">
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container w3-padding dracula-current-line">
-                        <h4>Monero</h4>
+                        <h4>Cryptocurrency</h4>
                     </div>
                 </div>
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container">
                         <p>
+                          <h4><b>What is Ethereum (ETH)?</b></h4>
+                          Ethereum is the community-run technology powering the cryptocurrency, ether (ETH) and thousands of decentralized applications.
+                          <br />
+                          <br />
+                          <a href="https://ethereum.org" target="_blank">https://ethereum.org</a>
+                          <h4><b>Ethereum Donation Info</b></h4>
+                          My Ethereum address:
+                          <br />
+                          <br />
+                          <pre>
+0xb6c1fbc03631669ad7295559ab08fae4c03366a5
+</pre>
+                        <img src="/images/ethereum-address.png" alt="Ethereum Address QR Code" class="center">
                           <h4><b>What is Monero (XMR)?</b></h4>
                           Monero is the leading cryptocurrency focused on private transactions.
                           It uses various privacy-enhancing technologies to ensure the anonymity of its users.
@@ -92,7 +105,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                           <br />
                           <br />
                           <code>monero.kevinthomas.dev</code> at port <code>18089</code>
-                          <h4><b>Donation Info</b></h4>
+                          <h4><b>Monero Donation Info</b></h4>
                           My Monero address:
                           <br />
                           <br />
