Add nano node info

--- a/cryptocurrency.html
+++ b/cryptocurrency.html
@@ -70,19 +70,33 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container">
                         <p>
-                          <h4><b>What is Ethereum (ETH)?</b></h4>
-                          Ethereum is the community-run technology powering the cryptocurrency, ether (ETH) and thousands of decentralized applications.
-                          <br />
-                          <br />
-                          <a href="https://ethereum.org" target="_blank">https://ethereum.org</a>
-                          <h4><b>Ethereum Donation Info</b></h4>
-                          My Ethereum address:
-                          <br />
-                          <br />
+                          I run a few cryptocurrency nodes on my home server, powered by a net-zero
+                          greenhouse gas emissions source.
+                          <h4><b>My Nodes</b></h4>
+                          <h5>Monero</h5>
+                          <code>monero.kevinthomas.dev</code> at port <code>18089</code>
+                          <h5>Nano</h5>
+                          <pre>
+nano_3q94m9gmji7gqhmceymcofrxg3prdguwtwtdxqywxxefhbgfgr9n5gcp44yo
+</pre>
+                          <a href="https://nanocrawler.cc/explorer/account/nano_3q94m9gmji7gqhmceymcofrxg3prdguwtwtdxqywxxefhbgfgr9n5gcp44yo"
+                             target="_blank">(Nano Crawler)</a>
+                          <h4><b>Donation Addresses</b></h4>
+                          <h5>Monero</h5>
+                          <pre>
+848NXEoUtwHQPtZjjwEmSU2TR7ian8vtyjdXWCWjY4sGUpgQAa8J8RGB6gPEpGDP47EurhxMR6qQaJCzfKpwH5uWNA1a55W
+</pre>
+                          <img src="/images/monero-address.png" alt="Monero Address QR Code" class="center">
+                          <h5>Nano</h5>
+                          <pre>
+nano_1iywqq7t17mbz68bs67rgenxw7ct3prmc8aghwetsp7z4fzpzzs667j7ciur
+</pre>
+                          <img src="/images/nano-address.png" alt="Nano Address QR Code" class="center">
+                          <h5>Ethereum</h5>
                           <pre>
 0xb6c1fbc03631669ad7295559ab08fae4c03366a5
 </pre>
-                        <img src="/images/ethereum-address.png" alt="Ethereum Address QR Code" class="center">
+                          <img src="/images/ethereum-address.png" alt="Ethereum Address QR Code" class="center">
                           <h4><b>What is Monero (XMR)?</b></h4>
                           Monero is the leading cryptocurrency focused on private transactions.
                           It uses various privacy-enhancing technologies to ensure the anonymity of its users.
@@ -100,19 +114,19 @@ and is wrapped around the whole page content, except for the footer in this exam
                           <br />
                           <br />
                           <a href="https://www.getmonero.org/resources/moneropedia/remote-node.html" target="_blank">https://www.getmonero.org/resources/moneropedia/remote-node.html</a>
-                          <h4><b>My Remote Node</b></h4>
-                          If you need to use a remote node, I run a public node with the full not-pruned Monero blockchain:
+                          <h4><b>What is Nano?</b></h4>
+                          Nano is decentralized, sustainable, and secure digital money focused on addressing the inefficiencies present in existing financial systems.
+                          It is feeless, eco-friendly, and instant.
                           <br />
                           <br />
-                          <code>monero.kevinthomas.dev</code> at port <code>18089</code>
-                          <h4><b>Monero Donation Info</b></h4>
-                          My Monero address:
+                          <a href="https://nano.org/" target="_blank">https://nano.org/</a>
+                          <h4><b>What is a Nano Node?</b></h4>
+                          Nano has a unique consensus mechanism called Open Representative Voting (ORV).
+                          Every account can freely choose a Representative at any time to vote on their behalf, even when the delegating account itself is offline.
+                          These Representative accounts are configured on nodes that remain online and vote on the validity of transactions they see on the network.
                           <br />
                           <br />
-                          <pre>
-848NXEoUtwHQPtZjjwEmSU2TR7ian8vtyjdXWCWjY4sGUpgQAa8J8RGB6gPEpGDP47EurhxMR6qQaJCzfKpwH5uWNA1a55W
-</pre>
-                        <img src="/images/monero-address.png" alt="Monero Address QR Code" class="center">
+                          <a href="https://docs.nano.org/what-is-nano/overview/" target="_blank">https://docs.nano.org/what-is-nano/overview/</a>
                         </p>
                     </div>
                 </div>
