--- a/cryptocurrency.html
+++ b/cryptocurrency.html
@@ -70,63 +70,37 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <div class="w3-card-4 w3-margin">
                     <div class="w3-container">
                         <p>
-                          I run a few cryptocurrency nodes on my home server, powered by a net-zero
+                          I run a few cryptocurrency nodes on my server, powered by a net-zero
                           greenhouse gas emissions source.
                           <h4><b>My Nodes</b></h4>
                           <h5>Monero</h5>
                           <code>monero.kevinthomas.dev</code> at port <code>18089</code>
-                          <h5>Nano</h5>
-                          <pre>
-nano_3q94m9gmji7gqhmceymcofrxg3prdguwtwtdxqywxxefhbgfgr9n5gcp44yo
-</pre>
-                          <a href="https://nanocrawler.cc/explorer/account/nano_3q94m9gmji7gqhmceymcofrxg3prdguwtwtdxqywxxefhbgfgr9n5gcp44yo"
-                             target="_blank">(Nano Crawler)</a>
+                          <h5>Ergo</h5>
+                          <code>ergo.kevinthomas.dev</code> at port <code>9030</code>
                           <h4><b>Donation Addresses</b></h4>
                           <h5>Monero</h5>
                           <pre>
 848NXEoUtwHQPtZjjwEmSU2TR7ian8vtyjdXWCWjY4sGUpgQAa8J8RGB6gPEpGDP47EurhxMR6qQaJCzfKpwH5uWNA1a55W
 </pre>
                           <img src="/images/monero-address.png" alt="Monero Address QR Code" class="center">
-                          <h5>Nano</h5>
+                          <h5>Ergo</h5>
                           <pre>
-nano_1iywqq7t17mbz68bs67rgenxw7ct3prmc8aghwetsp7z4fzpzzs667j7ciur
+9etzA3yox5fnEhEtd7NjVLw2S94oQe8MRiq9Dv91u5XnXamfSLL
 </pre>
-                          <img src="/images/nano-address.png" alt="Nano Address QR Code" class="center">
-                          <h5>Ethereum</h5>
-                          <pre>
-0xb6c1fbc03631669ad7295559ab08fae4c03366a5
-</pre>
-                          <img src="/images/ethereum-address.png" alt="Ethereum Address QR Code" class="center">
-                          <h4><b>What is Monero (XMR)?</b></h4>
+                          <img src="/images/ergo-address.png" alt="Ergo Address QR Code" class="center">
+                          <h4><b>What is Monero?</b></h4>
                           Monero is the leading cryptocurrency focused on private transactions.
                           It uses various privacy-enhancing technologies to ensure the anonymity of its users.
                           <br />
                           <br />
                           <a href="https://www.getmonero.org/get-started/what-is-monero" target="_blank">https://www.getmonero.org/get-started/what-is-monero</a>
-                          <h4><b>What is a Monero Node?</b></h4>
-                          A device on the Internet running the Monero software, with a full copy of the Monero blockchain, actively assisting the Monero network.
-                          Remote nodes can be private, if they are for personal use only, or open, if they are accessible by other people.
-                          If you can, it is always preferable to <a href="https://www.monero.how/how-to-run-monero-node" _target="_blank">run your own node</a> rather than use a remote one.
+                          <h4><b>What is Ergo?</b></h4>
+                          Ergo builds advanced cryptographic features and radically new DeFi functionality on the rock-solid foundations laid by a decade of blockchain theory and development.
+                          It is a smart contract enabled, specialized-hardware resistant, fair platform looking to change the financial industry for the better.
+                          I recommend reading the <a href="https://ergoplatform.org/en/blog/2021-04-26-the-ergo-manifesto/" target="_blank">https://ergoplatform.org/en/blog/2021-04-26-the-ergo-manifesto/</a>.
                           <br />
                           <br />
-                          An Open remote node can be used by people who, for their own reasons (usually because of hardware requirements, disk space, or technical abilities), can't/don't want to run their own node and prefer to relay on one publicly available on the Monero network.
-                          Open remote nodes are often simply referred as "remote nodes".
-                          <br />
-                          <br />
-                          <a href="https://www.getmonero.org/resources/moneropedia/remote-node.html" target="_blank">https://www.getmonero.org/resources/moneropedia/remote-node.html</a>
-                          <h4><b>What is Nano?</b></h4>
-                          Nano is decentralized, sustainable, and secure digital money focused on addressing the inefficiencies present in existing financial systems.
-                          It is feeless, eco-friendly, and instant.
-                          <br />
-                          <br />
-                          <a href="https://nano.org/" target="_blank">https://nano.org/</a>
-                          <h4><b>What is a Nano Node?</b></h4>
-                          Nano has a unique consensus mechanism called Open Representative Voting (ORV).
-                          Every account can freely choose a Representative at any time to vote on their behalf, even when the delegating account itself is offline.
-                          These Representative accounts are configured on nodes that remain online and vote on the validity of transactions they see on the network.
-                          <br />
-                          <br />
-                          <a href="https://docs.nano.org/what-is-nano/overview/" target="_blank">https://docs.nano.org/what-is-nano/overview/</a>
+                          <a href="https://ergoplatform.org" target="_blank">https://ergoplatform.org</a>
                         </p>
                     </div>
                 </div>
